refactor: check len slice from db
